@@ -554,10 +554,12 @@ class Model(WarningErrorMixin, URLMixin):
                     and hasattr(self._columns[field], 'field'):
                 res[field]['relation_field'] = copy.copy(
                         self._columns[field].field)
+            if res[field]['type'] in ('datetime', 'time'):
+                res[field]['format'] = copy.copy(self._columns[field].format)
 
             # convert attributes into pyson
             for attr in ('states', 'domain', 'context', 'digits',
-                    'add_remove'):
+                    'add_remove', 'format'):
                 if attr in res[field]:
                     res[field][attr] = encoder.encode(res[field][attr])
 
