@@ -1,3 +1,4 @@
+* Add time format validation
 * Remove ModelSQL.default_sequence
 
 Version 2.4.0 - 2012-04-23
